# storage/api-docs/api-docs.json
@@ -1064,6 +1064,63 @@
                     }
                 ]
             }
+        },
+        "/api/user/article/preference": {
+            "delete": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Remove user article preferences",
+                "description": "Deletes the article preferences of the authenticated user.",
+                "operationId": "b667e13bd60b7759229e8721dbf5204f",
+                "responses": {
+                    "200": {
+                        "description": "User article preference removed successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "user article preference removed successfully"
+                                        },
+                                        "data": {
+                                            "type": "string",
+                                            "example": ""
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to remove user article preference",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Failed to remove user article preference"
+                                        },
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Error message describing the issue"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
         }
     },
     "tags": [
